# hyperagent

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE.txt  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: builtin-modules.instructions.md  patterns.instructions.md  plugins.instructions.md  skills.instructions.md  src.instructions.md  tests.instructions.md
.github/workflows/: auto-merge-dependabot.yml  pr-validate.yml  publish.yml  update-golden.yml
builtin-modules/: CLAUDE.md  _restore.js  _restore.json  _save.js  _save.json  base64.json  crc32.json  html.json  image.json  markdown.json  ooxml-core.json  pdf-charts.json  pdf.json  pptx-charts.json  pptx-tables.json  pptx.json  shared-state.json  str-bytes.json  tsconfig.json  xlsx.json  xml-escape.json  zip-format.json  ziplib.json
builtin-modules/src/: base64.ts  crc32.ts  ooxml-core.ts  pdf-charts.ts  pdf.ts  pptx-charts.ts  pptx-tables.ts  pptx.ts  shared-state.ts  str-bytes.ts  xlsx.ts  xml-escape.ts  zip-format.ts
builtin-modules/src/types/: ha-modules.d.ts
deploy/k8s/: Dockerfile  README.md  common.sh  entrypoint.sh  setup-auth-keyvault.sh  setup-auth.sh
deploy/k8s/azure/: config.env  setup.sh  teardown.sh
deploy/k8s/local/: kind-config.yaml  setup.sh  teardown.sh
deploy/k8s/manifests/: device-plugin.yaml  hyperagent-job-keyvault.yaml  (+2 more)
docs/: ARCHITECTURE.md  BACKLOG.md  DEVELOPMENT.md  HOW-IT-WORKS.md  MCP.md  MODULES.md  PATTERNS.md  PLUGINS.md  PROFILES.md  RELEASING.md  SECURITY.md  SKILLS.md  USAGE.md  VALIDATION.md
docs/analysis/: ITERATION-ANALYSIS.md  TUNE-FINDINGS.md
docs/design/: DEEP-VALIDATION-DESIGN.md  MCP-INTEGRATION-DESIGN.md
patterns/: CLAUDE.md
patterns/data-extraction/: PATTERN.md
patterns/data-transformation/: PATTERN.md
patterns/fetch-and-process/: PATTERN.md
patterns/file-generation/: PATTERN.md
patterns/image-embed/: PATTERN.md
patterns/two-handler-pipeline/: PATTERN.md
plugins/: CLAUDE.md  tsconfig.json
plugins/fetch/: README.md  index.ts  plugin.json
plugins/fs-read/: README.md  index.ts  plugin.json
plugins/fs-write/: README.md  index.ts  plugin.json
plugins/mcp/: index.ts  plugin.json
plugins/shared/: path-jail.ts
scripts/: auto-approve-dependabot.sh  build-binary.js  build-modules.js  check-native-runtime.js  extract-hyperlight-builtins.ts  gauntlet-test.sh  generate-ha-modules-dts.ts  generate-host-modules-dts.ts  generate-native-dts.ts  hyperagent-docker  hyperagent-k8s  m365-mcp-servers.json  m365-refresh-servers.ts  m365-setup.ts  m365-show.ts  mcp-add-http.ts  patch-vscode-jsonrpc.js  setup-m365-app.ts  update-module-hashes.ts
skills/: CLAUDE.md
skills/api-explorer/: SKILL.md
skills/data-processor/: SKILL.md
skills/mcp-services/: SKILL.md
skills/pdf-expert/: SKILL.md
skills/pptx-expert/: SKILL.md
skills/report-builder/: SKILL.md
skills/research-synthesiser/: SKILL.md
skills/web-scraper/: SKILL.md
skills/xlsx-expert/: SKILL.md
src/: CLAUDE.md
src/agent/: abort-controller.ts  analysis-guest.ts  ansi.ts  approach-resolver.ts  audit-progress.ts  buffer-overflow.ts  cli-parser.ts  command-suggestions.ts  commands.ts  config-actions.ts  error-handler.ts  event-handler.ts  format-exports.ts  fuzzy-match.ts  index.ts  intent-matcher.ts  llm-output.ts  module-store.ts  pattern-loader.ts  profiles.ts  reverse-search.ts  skill-loader.ts  slash-commands.ts  spinner.ts  state.ts  system-message.ts  tool-gating.ts  transcript.ts  user-input-handler.ts  version.ts
src/code-validator/guest/: Cargo.toml  Justfile  README.md  index.d.ts  index.js  package-lock.json  package.json
src/code-validator/guest/host/: Cargo.toml  build.rs
src/code-validator/guest/host/src/: lib.rs  runtime.rs  sandbox.rs
src/code-validator/guest/runtime/: Cargo.toml  build.rs
src/code-validator/guest/runtime/examples/: test_regex.rs
src/code-validator/guest/runtime/include/: stdio.h  time.h  unistd.h
src/code-validator/guest/runtime/src/: js_parser.rs  lib.rs  libc.rs  main.rs  metadata.rs  plugin_scan.rs  validator.rs
src/code-validator/guest/runtime/src/main/: hyperlight.rs  native.rs
src/code-validator/guest/runtime/src/main/stubs/: clock.rs  io.rs  localtime.rs  mod.rs
src/plugin-system/: auditor.ts  manager.ts  schema-types.ts  types.ts
src/sandbox/: tool.d.ts  tool.js
src/sandbox/runtime/: Cargo.toml
src/sandbox/runtime/modules/native-deflate/: Cargo.toml
src/sandbox/runtime/modules/native-deflate/src/: lib.rs
src/sandbox/runtime/modules/native-globals/: Cargo.toml
src/sandbox/runtime/modules/native-globals/src/: lib.rs
src/sandbox/runtime/modules/native-html/: Cargo.toml
src/sandbox/runtime/modules/native-html/src/: lib.rs
src/sandbox/runtime/modules/native-image/: Cargo.toml
src/sandbox/runtime/modules/native-image/src/: lib.rs
src/sandbox/runtime/modules/native-markdown/: Cargo.toml
src/sandbox/runtime/modules/native-markdown/src/: lib.rs
src/sandbox/runtime/src/: main.rs
tests/: CLAUDE.md  analysis-guest.test.ts  approach-resolver.test.ts  builtin-modules.test.ts  command-suggestions.test.ts  custom-globals.test.ts  docgen-modules.test.ts  dts-sync.test.ts  fetch-binary.test.ts  fetch.test.ts  format-exports.test.ts  fs-read.test.ts  fs-write.test.ts  history.test.ts  hyperlight-host-module.test.ts  intent-matcher.test.ts  mcp-extract-embedded-json.test.ts  mcp-retry-fetch.test.ts  mcp.test.ts  module-hints.test.ts  module-store.test.ts  path-jail.test.ts  pattern-integrity.test.ts  pattern-loader.test.ts  pdf-core.test.ts  pdf-fonts.test.ts  pdf-visual.test.ts  plugin-audit-integration.test.ts  plugin-auditor.test.ts  plugin-manager.test.ts  plugin-source.test.ts  pptx-readability.test.ts  pptx-validation.test.ts  profiles.test.ts  sandbox-tool.test.ts  transcript.test.ts  tune.test.ts  xref-verify.test.ts
tests/fixtures/: pptx-test-prompts.md
tests/shims/: ziplib.shim.js
(+19 files in other folders)
