## Hyperlight Analysis Guest
##
## A Hyperlight-based guest binary for secure code analysis.
## Provides ReDoS-safe parsing of JavaScript modules, plugins, and handlers.
##
## This crate is independent of hyperlight-js and can be used standalone.

[workspace]
resolver = "2"
members = ["host", "runtime"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/anthropics/hyperagent"

[workspace.dependencies]
# Hyperlight dependencies - aligned with the hyperlight-js runtime resolved via Cargo git checkout
hyperlight-common = { git = "https://github.com/simongdavies/hyperlight", branch = "update-surrogate", default-features = false }
hyperlight-guest-bin = { git = "https://github.com/simongdavies/hyperlight", branch = "update-surrogate" }
hyperlight-guest = { git = "https://github.com/simongdavies/hyperlight", branch = "update-surrogate" }
hyperlight-host = { git = "https://github.com/simongdavies/hyperlight", branch = "update-surrogate", default-features = false, features = ["executable_heap", "kvm", "mshv3"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
