## Hyperlight Analysis Host
##
## Host-side library with NAPI bindings for the analysis guest.
## Embeds the guest binary and provides JavaScript/TypeScript API.

[package]
name = "hyperlight-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Hyperlight-based code analysis guest with NAPI bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hyperlight-host = { workspace = true }
napi = { version = "2", features = ["async", "napi6"] }
napi-derive = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[build-dependencies]
cargo-hyperlight = "0.1.7"
napi-build = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
