[package]
name = "native-html"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "native_html"
path = "src/lib.rs"

# No external dependencies — pure byte/string parsing
[dependencies]
rquickjs = { version = "0.11", default-features = false, features = ["bindgen", "futures", "macro", "loader"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(hyperlight)'] }
