[package]
name = "native-image"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "native_image"
path = "src/lib.rs"

[dependencies]
rquickjs = { version = "0.11", default-features = false, features = ["bindgen", "futures", "macro", "loader"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(hyperlight)'] }
